--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required( VERSION 3.3 )
 
 project( autotime )
 
+include( GNUInstallDirs )
+
 add_subdirectory( lib )
 add_subdirectory( tools )
 
