Added BUILD_TOOLS option, to make building of tools optional.
The tools add a few external dependencies and there could be other reasons
a library-only user might want to avoid building them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project( autotime )
 
 include( GNUInstallDirs )
 
+option( BUILD_TOOLS "Enable compilation of tools executables" YES )
+
 add_subdirectory( cmake )
 add_subdirectory( lib )
-add_subdirectory( tools )
+
+if( BUILD_TOOLS )
+    add_subdirectory( tools )
+endif()
 
