Added BUILD_DOCS option, to make building of API documentation optional.
Building the API docs add a few external dependencies and there could
be other reasons a user might want to avoid building them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,14 @@ project( autotime )
 include( GNUInstallDirs )
 
 option( BUILD_TOOLS "Enable compilation of tools executables" YES )
+option( BUILD_DOCS  "Enable generation of API documentation"  YES )
 
 add_subdirectory( cmake )
 add_subdirectory( lib )
+
+if( BUILD_DOCS )
+    add_subdirectory( doc )
+endif()
 
 if( BUILD_TOOLS )
     add_subdirectory( tools )
