--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,6 +3,12 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF )
 
 
+find_package( Boost
+    COMPONENTS REQUIRED
+        program_options
+)
+
+
 add_executable( sysinfo
     sysinfo.cpp
 )
