Renamed sysinfo to autotime-sysinfo.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,16 +3,16 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON )
 set( CMAKE_CXX_EXTENSIONS OFF )
 
 
-add_executable( sysinfo
+add_executable( autotime-sysinfo
     sysinfo.cpp
 )
 
-target_link_libraries( sysinfo
+target_link_libraries( autotime-sysinfo
     autotime
 )
 
 
-install( TARGETS sysinfo
+install( TARGETS autotime-sysinfo
     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
 )
 
