Enabled compiler warnings and GDB debug symbols.
Currently: -Wall -Wextra and a couple compatibility-related warnings.

Also, -ggdb.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ include( GNUInstallDirs )
 option( BUILD_TOOLS "Enable compilation of tools executables" YES )
 option( BUILD_DOCS  "Enable generation of API documentation"  YES )
 
+#set( ARCH_FLAGS "-march=native" )
+#set( PERF_FLAGS "-fomit-frame-pointer -Ofast" )
+set( WARN_FLAGS "-Wall -Wextra -Wabi -Wc++14-compat" )
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb ${ARCH_FLAGS} ${PERF_FLAGS} ${WARN_FLAGS}" )
+
 add_subdirectory( cmake )
 add_subdirectory( lib )
 
