Added overhead.cpp - Instantiates a few common specializations of Overhead-family templates.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library( autotime SHARED
     iterate.cpp
     log.cpp
     os.cpp
+    overhead.cpp
     time.cpp
     types.cpp
     warmup.cpp
