Added memory_benchmarks.cpp - Implements memory-category benchmarks.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable( autotime-bench
     dispatch.cpp
     list.cpp
     main.cpp
+    memory_benchmarks.cpp
     output.cpp
     overhead_benchmarks.cpp
     work_benchmarks.cpp
