Added function_utils.{hpp,cpp} - Support for function benchmarks.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package( Threads REQUIRED )
 add_executable( autotime-bench
     atomic_benchmarks.cpp
     dispatch.cpp
+    function_utils.cpp
     heap_benchmarks.cpp
     list.cpp
     main.cpp
