Added condvar_benchmarks.cpp - Implements condvar-category benchmarks.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package( Threads REQUIRED )
 
 add_executable( autotime-bench
     atomic_benchmarks.cpp
+    condvar_benchmarks.cpp
     dispatch.cpp
     function_benchmarks.cpp
     function_utils.cpp
