Added (disabled) support for compiling with -O0.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -34,6 +34,8 @@ add_executable( autotime-bench
     work_benchmarks.cpp
 )
 
+#target_compile_options( autotime-bench PRIVATE -O0 )
+
 target_link_libraries( autotime-bench
     autotime
     Boost::program_options
