--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable( autotime-bench
     dispatch.cpp
     exception_benchmarks.cpp
     exception_utils.cpp
+    file_utils.cpp
     function_benchmarks.cpp
     function_utils.cpp
     heap_benchmarks.cpp
