Added Category::pipe benchmarks.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable( autotime-bench
     mutex_benchmarks.cpp
     output.cpp
     overhead_benchmarks.cpp
+    pipe_benchmarks.cpp
     stream_benchmarks.cpp
     thread_benchmarks.cpp
     thread_utils.cpp
