Added description.{hpp,cpp} - Provides support for querying and printing descriptive information about benchmarks and categories.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable( autotime-bench
     atomic_benchmarks.cpp
     condvar_benchmarks.cpp
     container_benchmarks.cpp
+    description.cpp
     dispatch.cpp
     exception_benchmarks.cpp
     exception_utils.cpp
