Factored out test data generation functions from container_benchmarks.cpp.
Migrated MakeElement<>() and MakeData<>() into container_utils.{hpp,cpp},
for broader use.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable( autotime-bench
     atomic_benchmarks.cpp
     condvar_benchmarks.cpp
     container_benchmarks.cpp
+    container_utils.cpp
     description.cpp
     dispatch.cpp
     exception_benchmarks.cpp
