Added Category::std_hash benchmarks.
Measure std::hash<> computation over different numeric types and string lengths.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable( autotime-bench
     file_utils.cpp
     function_benchmarks.cpp
     function_utils.cpp
+    hash_benchmarks.cpp
     heap_benchmarks.cpp
     list.cpp
     main.cpp
