--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable( autotime-bench
     overhead_benchmarks.cpp
     pipe_benchmarks.cpp
     pipe_utils.cpp
+    poll_benchmarks.cpp
     stream_benchmarks.cpp
     thread_benchmarks.cpp
     thread_utils.cpp
